--- a/data-architect.html
+++ b/data-architect.html
@@ -77,7 +77,7 @@
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/oak-street-health/job/oUUsbfwb'>Oak Street Health Careers - Datawarehouse Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/oak-street-health/job/oUUsbfwb'>Oak Street Health Careers - Datawarehouse Architect</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -139,7 +139,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://imanagecom.applytojob.com/apply/BhmLHiSOki/Data-Architect'>Data Architect - iManage - Career Page</a></h5> 
+<h5><a href='http://imanagecom.applytojob.com/apply/BhmLHiSOki/Data-Architect'>Data Architect - iManage - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -189,7 +189,7 @@ dig?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHk9VfwP&k=Job&j=oaqV9fwo&__jvst=Employee&__jvsd=sMuo8gwx&__jvsc=Twitter&bid=n0q9kMwa'>Conviva Careers - Principal Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHk9VfwP&k=Job&j=oaqV9fwo&__jvst=Employee&__jvsd=sMuo8gwx&__jvsc=Twitter&bid=n0q9kMwa'>Conviva Careers - Principal Data Architect</a></h5> 
 <p><span class="badge badge-light">Foster City California</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -269,7 +269,7 @@ dig?...</p>
 <p><span class="badge badge-light">Columbus, OH  Columbus</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999697851832-data-and-analytics-solution-architect'>CapTech Consulting Data and Analytics Solution Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999697851832-data-and-analytics-solution-architect'>CapTech Consulting Data and Analytics Solution Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -298,7 +298,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999697651138-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999697651138-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -312,7 +312,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=o4Lkbfw4&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=ntyHeMwd'>Guidewire Software, Inc. Careers - Staff Engineer / Big Data Architect, Cloud Data Platform - San Mateo, CA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=o4Lkbfw4&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=ntyHeMwd'>Guidewire Software, Inc. Careers - Staff Engineer / Big Data Architect, Cloud Data Platform - San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
@@ -328,7 +328,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Auckland</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999697649915-analyst-data-architecture'>Publicis Groupe Analyst, Data Architecture | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999697649915-analyst-data-architecture'>Publicis Groupe Analyst, Data Architecture | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY 10014, USA</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -336,7 +336,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
-<h5><a href='https://www.vertex-solutions.com/job/data-and-cloud/enterprise-data-architect/j14668/'>Enterprise Data Architect Job | Vertex Solutions</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.vertex-solutions.com/job/data-and-cloud/enterprise-data-architect/j14668/'>Enterprise Data Architect Job | Vertex Solutions</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
@@ -346,13 +346,13 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jellysmack.recruitee.com/o/database-architect-hf-cdi'>
+<h5><a href='https://jellysmack.recruitee.com/o/database-architect-hf-cdi'>
       Database Architect H/F - CDI - Jellysmack
     </a></h5> 
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcompany1/743999695235990-data-architect'>Netcompany Data Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netcompany1/743999695235990-data-architect'>Netcompany Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -388,11 +388,11 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">New York, NY 10014, USA</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/sessionm/6a7bcfda-df3e-4134-b8c0-dc31acaddf86'>SessionM - Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/sessionm/6a7bcfda-df3e-4134-b8c0-dc31acaddf86'>SessionM - Data Architect</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/InfiniteComputingSystems/743999697477822-database-architect-looking-for-locals-to-lansing-mi'>Infinite Computing Systems Database Architect - looking for locals to Lansing, MI | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/InfiniteComputingSystems/743999697477822-database-architect-looking-for-locals-to-lansing-mi'>Infinite Computing Systems Database Architect - looking for locals to Lansing, MI | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -446,7 +446,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Vilnius</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<h5><a href='http://agribank.applytojob.com/apply/ylz6Qczma5/Principal-Digital-Data-Delivery-Architect'>Principal Digital Data Delivery Architect - AgriBank - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://agribank.applytojob.com/apply/ylz6Qczma5/Principal-Digital-Data-Delivery-Architect'>Principal Digital Data Delivery Architect - AgriBank - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -490,7 +490,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Albany, NY</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
